petclinic-ns.yaml
# kubectl apply -f petclinic-ns.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
