managed-cert-ingress.yaml
# kubectl apply -f managed-cert.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: petclinic
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "k8s-ip" # gcp의 static ip
    networking.gke.io/managed-certificates: managed-cert # gcp certification
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: petclinic-web-svc
      port:
        number: 80
